// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bulletin should render audio correctly 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
  background-color: #F2F2F2;
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-column: 1/span 2;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-6 {
    width: 66.67%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-6 {
      grid-column: 3/span 4;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-left: 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-14 {
    padding-left: 0;
  }
}

.emotion-16 {
  background-color: #222222;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-16 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
    margin-bottom: 1rem;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5rem;
}

.emotion-18>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-20 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <a
          aria-labelledby="bulletin-httpsbbccouk"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-httpsbbccouk"
            role="text"
          >
            <span
              class="emotion-12 emotion-13"
            >
              Listen, 
            </span>
            <span>
              This is the headline
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-14 emotion-15"
        dir="ltr"
      >
        This is the summary text
      </p>
      <div
        aria-hidden="true"
        class="emotion-16 emotion-17"
        dir="ltr"
      >
        <span
          class="emotion-18 emotion-19"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="emotion-20 emotion-21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        Listen
      </div>
    </div>
  </div>
</div>
`;

exports[`Bulletin should render audio correctly with lang prop passed in 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
  background-color: #F2F2F2;
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-column: 1/span 2;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-6 {
    width: 66.67%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-6 {
      grid-column: 3/span 4;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-right: 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.375rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-14 {
    padding-right: 0;
  }
}

.emotion-16 {
  background-color: #222222;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-16 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
    margin-bottom: 1rem;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.5rem;
}

.emotion-18>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-20 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="rtl"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="rtl"
      >
        <a
          aria-labelledby="bulletin-httpsbbccouk"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-httpsbbccouk"
            role="text"
          >
            <span
              class="emotion-12 emotion-13"
              lang="en-GB"
            >
              Listen, 
            </span>
            <span>
              This is the headline
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-14 emotion-15"
        dir="rtl"
      >
        This is the summary text
      </p>
      <div
        aria-hidden="true"
        class="emotion-16 emotion-17"
        dir="rtl"
      >
        <span
          class="emotion-18 emotion-19"
          dir="rtl"
        >
          <svg
            aria-hidden="true"
            class="emotion-20 emotion-21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        Listen
      </div>
    </div>
  </div>
</div>
`;

exports[`Bulletin should render live audio correctly 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
  background-color: #F2F2F2;
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-column: 1/span 2;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-6 {
    width: 66.67%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-6 {
      grid-column: 3/span 4;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-left: 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-16 {
    padding-left: 0;
  }
}

.emotion-18 {
  background-color: #B80000;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-18 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
    margin-bottom: 1rem;
  }
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5rem;
}

.emotion-20>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-22 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <a
          aria-labelledby="bulletin-httpsbbccouk"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-httpsbbccouk"
            role="text"
          >
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              LIVE 
            </span>
            <span
              class="emotion-14 emotion-15"
              lang="en-GB"
            >
              Listen LIVE, 
            </span>
            This is the headline
          </span>
        </a>
      </h3>
      <p
        class="emotion-16 emotion-17"
        dir="ltr"
      >
        This is the summary text
      </p>
      <div
        aria-hidden="true"
        class="emotion-18 emotion-19"
        dir="ltr"
      >
        <span
          class="emotion-20 emotion-21"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="emotion-22 emotion-23"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        Listen Live
      </div>
    </div>
  </div>
</div>
`;

exports[`Bulletin should render live video correctly 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    width: 50%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      grid-column: 1/span 3;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    width: 50%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      grid-column: 4/span 3;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.125rem;
  line-height: 1.375rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding: 0 0 0.5rem 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #B80000;
  display: inline-block;
  margin-right: 0.5rem;
}

.emotion-14 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    padding-left: 0;
    padding-right: 0;
  }
}

.emotion-18 {
  background-color: #B80000;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
  }
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5rem;
}

.emotion-20>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-22 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <a
          aria-labelledby="bulletin-httpsbbccouk"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-httpsbbccouk"
            role="text"
          >
            <span
              aria-hidden="true"
              class="emotion-12 emotion-13"
              dir="ltr"
            >
              LIVE 
            </span>
            <span
              class="emotion-14 emotion-15"
              lang="en-GB"
            >
              Watch LIVE, 
            </span>
            This is the headline
          </span>
        </a>
      </h3>
      <p
        class="emotion-16 emotion-17"
        dir="ltr"
      >
        This is the summary text
      </p>
      <div
        aria-hidden="true"
        class="emotion-18 emotion-19"
        dir="ltr"
      >
        <span
          class="emotion-20 emotion-21"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="emotion-22 emotion-23"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
        </span>
        Watch Live
      </div>
    </div>
  </div>
</div>
`;

exports[`Bulletin should render radio bulletin without ariaId 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
  background-color: #F2F2F2;
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-column: 1/span 2;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-6 {
    width: 66.67%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-6 {
      grid-column: 3/span 4;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-left: 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-14 {
    padding-left: 0;
  }
}

.emotion-16 {
  background-color: #222222;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-16 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
    margin-bottom: 1rem;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5rem;
}

.emotion-18>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-20 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <a
          aria-labelledby="bulletin-null"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-null"
            role="text"
          >
            <span
              class="emotion-12 emotion-13"
            >
              Listen, 
            </span>
            <span>
              This is the headline
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-14 emotion-15"
        dir="ltr"
      >
        This is the summary text
      </p>
      <div
        aria-hidden="true"
        class="emotion-16 emotion-17"
        dir="ltr"
      >
        <span
          class="emotion-18 emotion-19"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="emotion-20 emotion-21"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        Listen
      </div>
    </div>
  </div>
</div>
`;

exports[`Bulletin should render radio bulletin without summary correctly 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
  background-color: #F2F2F2;
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-2 {
      grid-column: 1/span 2;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-6 {
    width: 66.67%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-6 {
      grid-column: 3/span 4;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-8 {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-left: 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  background-color: #222222;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-14 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
    margin-bottom: 1rem;
  }
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5rem;
}

.emotion-16>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-18 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <a
          aria-labelledby="bulletin-httpsbbccouk"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-httpsbbccouk"
            role="text"
          >
            <span
              class="emotion-12 emotion-13"
            >
              Listen, 
            </span>
            <span>
              This is the headline
            </span>
          </span>
        </a>
      </h3>
      <div
        aria-hidden="true"
        class="emotion-14 emotion-15"
        dir="ltr"
      >
        <span
          class="emotion-16 emotion-17"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-19"
            focusable="false"
            height="12px"
            viewBox="0 0 13 12"
            width="13px"
          >
            <path
              d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
            />
            <path
              d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
            />
          </svg>
        </span>
        Listen
      </div>
    </div>
  </div>
</div>
`;

exports[`Bulletin should render video correctly 1`] = `
.emotion-0 {
  position: relative;
  background-color: #F2F2F2;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-column-gap: 1rem;
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  padding: 0.5rem 0.5rem 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    width: 50%;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      grid-column: 1/span 3;
    }
  }
}

.emotion-4 {
  display: block;
  width: 100%;
}

.emotion-6 {
  display: inline-block;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    width: 50%;
    padding-right: 1rem;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      grid-column: 4/span 3;
      padding: 0;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.125rem;
  line-height: 1.375rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    padding: 0 0 0.5rem 0;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-14 {
  color: #3F3F42;
  margin: 0;
  padding: 0 0.5rem 1rem;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    padding-left: 0;
    padding-right: 0;
  }
}

.emotion-16 {
  background-color: #222222;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  padding: 0.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    padding: 0.5rem 1rem;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5rem;
}

.emotion-18>svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.emotion-20 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="Iron man"
        class="emotion-4 emotion-5"
        src="https://ichef.bbci.co.uk/news/[WIDTH]/cpsprodpb/11897/production/_106613817_999_al_.jpg"
        srcset="https://ichef.bbci.co.uk/news/300/cpsprodpb/11897/production/_106613817_999_al_.jpg 300w, https://ichef.bbci.co.uk/news/450/cpsprodpb/11897/production/_106613817_999_al_.jpg 450w, https://ichef.bbci.co.uk/news/600/cpsprodpb/11897/production/_106613817_999_al_.jpg 600w, https://ichef.bbci.co.uk/news/1024/cpsprodpb/11897/production/_106613817_999_al_.jpg 1024w"
      />
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
        dir="ltr"
      >
        <a
          aria-labelledby="bulletin-httpsbbccouk"
          class="emotion-10 emotion-11"
          href="https://bbc.co.uk"
        >
          <span
            id="bulletin-httpsbbccouk"
            role="text"
          >
            <span
              class="emotion-12 emotion-13"
            >
              Watch, 
            </span>
            <span>
              This is the headline
            </span>
          </span>
        </a>
      </h3>
      <p
        class="emotion-14 emotion-15"
        dir="ltr"
      >
        This is the summary text
      </p>
      <div
        aria-hidden="true"
        class="emotion-16 emotion-17"
        dir="ltr"
      >
        <span
          class="emotion-18 emotion-19"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            class="emotion-20 emotion-21"
            focusable="false"
            height="12px"
            viewBox="0 0 32 32"
            width="12px"
          >
            <polygon
              points="3,32 29,16 3,0"
            />
          </svg>
        </span>
        Watch
      </div>
    </div>
  </div>
</div>
`;
